syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = ".;api";

package api;

service RecordService {
  rpc CreateRecord(CreateRecordRequest) returns (CreateRecordResponse) {}
  rpc GetRecord(GetRecordRequest) returns (GetRecordResponse) {}
  rpc GetRecords(GetRecordsRequest) returns (GetRecordsResponse) {}
  rpc DeleteRecord(GetRecordRequest) returns (DeleteRecordResponse) {}
}

message CreateRecordRequest {
    string name = 1;
    uint64 userId = 2;
    uint64 record = 3;
    map<string, string> data = 4;
}

message CreateRecordResponse {
    bool success = 1;
    string id = 2;
    enum Error {
        NONE = 0;
        NAME_TOO_SHORT = 1;
        NAME_TOO_LONG = 2;
        USER_ID_REQUIRED = 3;
        RECORD_REQUIRED = 4;
        RECORD_EXISTS = 5;
    }
    Error error = 3;
}

message NameUserId {
    string name = 1;
    uint64 userId = 2;
}

message GetRecordRequest {
    string id = 1;
    NameUserId nameUserId = 2;
}

message GetRecordResponse {
    bool success = 1;
    Record record = 2;
    enum Error {
        NONE = 0;
        INVALID = 1;
        NOT_FOUND = 2;
        NAME_TOO_SHORT = 3;
        NAME_TOO_LONG = 4;
    }
    Error error = 3;
}

message GetRecordsRequest {
    string name = 1;
    uint32 max = 2;
    uint64 page = 3;
}

message GetRecordsResponse {
    bool success = 1;
    repeated Record records = 2;
    enum Error {
        NONE = 0;
        NAME_TOO_SHORT = 1;
        NAME_TOO_LONG = 2;
    }
    Error error = 3;
}

message DeleteRecordResponse {
    bool success = 1;
    enum Error {
        NONE = 0;
        INVALID = 1;
        NOT_FOUND = 2;
        NAME_TOO_SHORT = 3;
        NAME_TOO_LONG = 4;
    }
    Error error = 2;
}

message Record {
    string id = 1;
    string name = 2;
    uint64 userId = 3;
    uint64 record = 4;
    uint64 rank = 5;
    map<string, string> data = 6;
    google.protobuf.Timestamp createdAt = 7;
}
